// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapsible matches snapshot when is not open 1`] = `
.css-z8uzdf-Icon__root {
  color: inherit;
}

.css-jmoamz-Collapsible__header {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.css-jmoamz-Collapsible__header [data-element="title"] {
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
}

.css-jmoamz-Collapsible__header:hover {
  cursor: pointer;
}

.css-jmoamz-Collapsible__header:hover [data-element="title"] {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

.css-1rh3g0j-Collapsible__icon {
  margin-bottom: -2px;
  color: #879ba6;
}

.css-6kwq2t-Label__root-Label__ellipsized {
  display: inline-block;
  color: rgba(135,155,166,0.7);
  text-transform: uppercase;
  font-weight: 500;
  font-size: 0.88rem;
  overflow: hidden;
  text-overflow: ellipsis;
}

@media only screen and (max-width:768px) {
  .css-6kwq2t-Label__root-Label__ellipsized {
    font-size: 0.8rem;
  }
}

<div
  className="css-1k7784t-Collapsible__root"
>
  <div
    className="css-jmoamz-Collapsible__header"
  >
    <div
      data-element="title"
    >
      <div
        className="css-6kwq2t-Label__root-Label__ellipsized"
      >
        Title
      </div>
    </div>
    <div
      className="css-1rh3g0j-Collapsible__icon"
    >
      <i
        className="css-z8uzdf-Icon__root Drycon Drycon-chevron-down"
      />
    </div>
  </div>
</div>
`;

exports[`Collapsible matches snapshot when it is open 1`] = `
.css-z8uzdf-Icon__root {
  color: inherit;
}

.css-jmoamz-Collapsible__header {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.css-jmoamz-Collapsible__header [data-element="title"] {
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
}

.css-jmoamz-Collapsible__header:hover {
  cursor: pointer;
}

.css-jmoamz-Collapsible__header:hover [data-element="title"] {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

.css-1rh3g0j-Collapsible__icon {
  margin-bottom: -2px;
  color: #879ba6;
}

.css-1jwj8t7-Collapsible__content {
  padding-top: 8px;
}

.css-6kwq2t-Label__root-Label__ellipsized {
  display: inline-block;
  color: rgba(135,155,166,0.7);
  text-transform: uppercase;
  font-weight: 500;
  font-size: 0.88rem;
  overflow: hidden;
  text-overflow: ellipsis;
}

@media only screen and (max-width:768px) {
  .css-6kwq2t-Label__root-Label__ellipsized {
    font-size: 0.8rem;
  }
}

<div
  className="css-1k7784t-Collapsible__root"
>
  <div
    className="css-jmoamz-Collapsible__header"
  >
    <div
      data-element="title"
    >
      <div
        className="css-6kwq2t-Label__root-Label__ellipsized"
      >
        Title
      </div>
    </div>
    <div
      className="css-1rh3g0j-Collapsible__icon"
    >
      <i
        className="css-z8uzdf-Icon__root Drycon Drycon-chevron-up"
      />
    </div>
  </div>
  <div
    className="css-1jwj8t7-Collapsible__content"
  >
    Collapsible content
  </div>
</div>
`;

exports[`Collapsible matches snapshot when the title is a node 1`] = `
.css-z8uzdf-Icon__root {
  color: inherit;
}

.css-jmoamz-Collapsible__header {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.css-jmoamz-Collapsible__header [data-element="title"] {
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
}

.css-jmoamz-Collapsible__header:hover {
  cursor: pointer;
}

.css-jmoamz-Collapsible__header:hover [data-element="title"] {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

.css-1rh3g0j-Collapsible__icon {
  margin-bottom: -2px;
  color: #879ba6;
}

.css-1jwj8t7-Collapsible__content {
  padding-top: 8px;
}

.css-1y3lkgh-Text__root-Text__primary-Text__default {
  display: inline;
  color: #172b4e;
  font-size: 1rem;
}

<div
  className="css-1k7784t-Collapsible__root"
>
  <div
    className="css-jmoamz-Collapsible__header"
  >
    <div
      data-element="title"
    >
      <span
        className="css-1y3lkgh-Text__root-Text__primary-Text__default"
      >
        The title
      </span>
    </div>
    <div
      className="css-1rh3g0j-Collapsible__icon"
    >
      <i
        className="css-z8uzdf-Icon__root Drycon Drycon-chevron-up"
      />
    </div>
  </div>
  <div
    className="css-1jwj8t7-Collapsible__content"
  >
    Collapsible content
  </div>
</div>
`;
